[package]
name = "read-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
csv = "1.4.0"
error-chain = "0.12.4"
reqwest = { version = "0.13.3" , features = ["blocking","json"]} 
rhai = "1.24.0"
select = "0.6.1"
serde = {version = "1.0.228",features=["derive"]} 
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = {version = "1.52.3",features=["full"]} 
